# urfu_teamfinder

./: .gitignore  LICENSE  README.md  docker-compose.yaml  example.env  pyproject.toml
configs/: example.secrets.toml
scripts/: Dockerfile  build.sh  compile_locales.sh  create_app_tables.py  init_locale.sh  insert_tags.py  push.sh  update_locales.sh
src/bot/: Dockerfile  __main__.py
src/bot/locales/ru/LC_MESSAGES/: messages.po
src/bot/logic/: __init__.py  adapter.py  entities.py  middlewares.py  states.py  utils.py
src/bot/logic/handlers/: account.py  command.py  dialogue.py  misc.py
src/bot/markup/: callback_data.py
src/bot/markup/inline/: __init__.py  account.py  dialogue.py  misc.py
src/bot/text/: __init__.py  account.py
src/core/: config.py
src/core/postgres/: __init__.py  wrapper.py
src/core/postgres/bot/: __init__.py  engine.py  models.py
